Minor Fixes of UI

--- a/Web/order.html
+++ b/Web/order.html
@@ -18,18 +18,18 @@
 			<div class="registration">
 				<div class="orderBox" >
 					<div id="headline">Pick Up</div>
-					<input class="input" type="input" id="address" placeholder="address"> </input>
-					<input class="input" type="input" id="fullName" placeholder="full name"> </input>
-					<input class="input" type="input" id="phoneNumber" placeholder="phone #"> </input>
-					<input class="input" type="input" id="email" placeholder="email"> </input>
+					<input class="input" type="input" id="address" placeholder="Address"> </input>
+					<input class="input" type="input" id="fullName" placeholder="Full name"> </input>
+					<input class="input" type="input" id="phoneNumber" placeholder="Phone #"> </input>
+					<input class="input" type="input" id="email" placeholder="Email"> </input>
 	
 				</div>
 				<div class="orderBox">
 					<div id="headline">Delivery</div>
-					<input class="input" type="input" id="address" placeholder="address"> </input>
-					<input class="input" type="input" id="fullName" placeholder="full name"> </input>
-					<input class="input" type="input" id="phoneNumber" placeholder="phone #"> </input>
-					<input class="input" type="input" id="email" placeholder="email"> </input>
+					<input class="input" type="input" id="address" placeholder="Address"> </input>
+					<input class="input" type="input" id="fullName" placeholder="Full name"> </input>
+					<input class="input" type="input" id="phoneNumber" placeholder="Phone #"> </input>
+					<input class="input" type="input" id="email" placeholder="Email"> </input>
 				</div>
 				<div class="orderBox">
 					<div id="weight">
