--- a/Web/payment.html
+++ b/Web/payment.html
@@ -19,14 +19,16 @@
 			<div class="registration" >
 					<div id="headline">Billing Address</div>
 					<input type="checkbox" name="c" value="pickup"> Use PickUp Address</input>
-					<input class="input" type="input" id="address" placeholder="address"> </input>
-					<input class="input" type="input" id="fullName" placeholder="full name"> </input>
-					<input class="input" type="input" id="phoneNumber" placeholder="phone #"> </input>
-					<input class="input" type="input" id="email" placeholder="email"></input>
+					<input class="input" type="input" id="address" placeholder="Address"> </input>
+					<input class="input" type="input" id="fullName" placeholder="Full Name"> </input>
+					<input class="input" type="input" id="phoneNumber" placeholder="Phone #"> </input>
+					<input class="input" type="input" id="email" placeholder="Email"></input>
 			</div>
 			<div class="registration">
 					<div id="headline">Payment Method</div>
+					<input class="input" type="input" id="fullName" placeholder="Name on the Card"> </input>
 					<input class="input" type="input" id="CardNumber" placeholder="Card Number"> </input>
+
 					<input class="input" type="input" id="Expires" placeholder="Expires (05/2001)"> </input>
 					<input class="input" type="input" id="SecurityCode" placeholder="Security Code"> </input>
 			</div>
