V Change Weight/Size

--- a/Web/admin/login.html
+++ b/Web/admin/login.html
@@ -4,33 +4,23 @@
 		<title> ExpressDelivery</title>
 		<meta charset="UTF-8">
 	</head>
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="../main.css">
 	<body class="body">
 		<div class="toolbar">
 			<div id="logo">ExpressDelivery</div>
 			<div class="menu">
-				<div class="link">About</div>
-				<div class="link">FAQ</div>
-				<div class="link">Contact</div>
+				<div class="link">Log In</div>
 			</div>
 		</div>
 
 		<div class="content">
-			<div id="pickup">
-				<div id="headline">Pickup</div>
-
-
-			</div>
-			<div id="delivery">
-				<div id="headline">Delivery</div>
-			</div>
-			<div id="orderType">
-				<div id="quantity">
-					<div id="headline">Weight</div>
+			<div class="header">
+				<div id="headline">Admin Login</div>
+				<div class="registration">
+					<input class="input" type="input" id="address" placeholder="Login"></input>
+					<input class="input" type="password" id="address" placeholder="Password"></input>
 				</div>
-				<div id="weight">
-					<div id="headline">Transportation</div>
-				</div>
+				<div class="button">Login</div>
 			</div>
 		</div>
 
