--- a/Web/order.html
+++ b/Web/order.html
@@ -16,6 +16,26 @@
 		</div>
 		<div class="content">
 			<div class="registration">
+				<div class="orderBox">
+					<div id="weight">
+						<div id="headline">Size</div>
+						<div class="picWeight" id="paper"></div>
+						<div class="picWeight" id="smallbox"></div>
+						<div class="picWeight" id="mediumbox"></div>
+						<div class="picWeight" id="bigbox"></div>
+					</div>
+					<div id="transportation">
+						<div id="headline">Transportation</div>
+						<div class="picWeight" type="transport" id="bicycle"></div>
+						<div class="picWeight" type="transport" id="trail2"></div>
+					</div>
+				</div>
+				<div class="orderBox" >
+					<div id="headline">Time</div>
+					<input type="checkbox" name="c" value="pickup"> Right Now</input>
+					<input class="input" type="input" id="fullName" placeholder="Today at (12:00)"> </input>
+	
+				</div>
 				<div class="orderBox" >
 					<div id="headline">Pick Up</div>
 					<input class="input" type="input" id="address" placeholder="Address"> </input>
@@ -31,20 +51,6 @@
 					<input class="input" type="input" id="phoneNumber" placeholder="Phone #"> </input>
 					<input class="input" type="input" id="email" placeholder="Email"> </input>
 				</div>
-				<div class="orderBox">
-					<div id="weight">
-						<div id="headline">Weight</div>
-						<div class="picWeight" id="paper"></div>
-						<div class="picWeight" id="smallbox"></div>
-						<div class="picWeight" id="mediumbox"></div>
-						<div class="picWeight" id="bigbox"></div>
-					</div>
-					<div id="transportation">
-						<div id="headline">Transportation</div>
-						<div class="picWeight" type="transport" id="bicycle"></div>
-						<div class="picWeight" type="transport" id="trail"></div>
-					</div>
-				</div>
 			</div>
 			<div class="button" id="order">Order 7$</div>
 		</div>
@@ -52,7 +58,7 @@
 			<div class="title">
 				<div id="contacts">Contact Address</div>
 				<div id="about">About</div>
-				<div id="jobs">jobs</div>
+				<div id="jobs">Jobs</div>
 				<div id="faq">FAQ</div>
 			</div>
 			<div id="address">
