--- a/Web/payment.html
+++ b/Web/payment.html
@@ -39,7 +39,7 @@
 			<div class="title">
 				<div id="contacts">Contact Address</div>
 				<div id="about">About</div>
-				<div id="jobs">jobs</div>
+				<div id="jobs">Jobs</div>
 				<div id="faq">FAQ</div>
 			</div>
 			<div id="address">
