--- a/Web/paymentresult.html
+++ b/Web/paymentresult.html
@@ -17,14 +17,36 @@
 
 		<div class="content">
 			<div class="registration">
-				<div id="headline" type="positive">Successful!</div>
-				<div id="result">
-					Email is sent to your email address with the confirmation and further instructions.
+			<!-- Change Type to negative and the background Color will be changed -->
+				<div id="headline" type="positive">Summary</div>
+				<div class="column">
+					<div class="row">Size:</div>
+					<div class="row">TransportationType:</div>
+					<div class="row">Time:</div>
+					<div class="row">Pickup Address:</div>
+					<div class="row">Delivery Address:</div>
 				</div>
-				<div id="thanks">
-					Thanks for using Express Delivery!
-					Go
-					<a href="index.html">Home</href>
+				<div class="column">
+					<div class="row">Size</div>
+					<div class="row">Transportation</div>
+					<div class="row">Right Now</div>
+					<div class="row">Pickup Address</div>
+					<div class="row">Delivery Address</div>
+				</div>
+			</div>
+
+
+			<div class="registration">
+				<div class="orderBox">
+					<div id="headline" type="positive">Successful!</div>
+					<div id="result">
+						Email is sent to your email address with the confirmation.
+					</div>
+					<div id="thanks">
+						Thanks for using Express Delivery!
+						Go
+						<a href="index.html">Home</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -33,7 +55,7 @@
 			<div class="title">
 				<div id="contacts">Contact Address</div>
 				<div id="about">About</div>
-				<div id="jobs">jobs</div>
+				<div id="jobs">Jobs</div>
 				<div id="faq">FAQ</div>
 			</div>
 			<div id="address">
