JS added to order page

--- a/Web/index.html
+++ b/Web/index.html
@@ -28,7 +28,7 @@
 				<div id="boxes">
 					Take the advantage of our new online system and order couriers by planning.
 					<div class="pic" id="online"></div>
-					<div class="button" id="start">Start</div>
+					<a href='order.html'><div class="button" id="start">Start</div></a>
 				</div>
 				<div id="boxes">
 					Our 24/7 Customer Service is very happy to recieve your call to solve your delivery problems
