JS added to payment page

--- a/Web/order.html
+++ b/Web/order.html
@@ -97,7 +97,7 @@
 					<input class="input" type="input" id="email" placeholder="Email"> </input>
 				</div>
 			</div>
-			<div class="button" id="order">Order 7$</div>
+			<a href='payment.html'><div class="button" id="order">Order 7$</div></a>
 		</div>
 		<div class="footer">
 			<div class="title">
